--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -107,7 +107,7 @@
         </sw-container>
 
         {% block sw_customer_base_form_tag_field %}
-            <sw-tag-field :entity="customer"></sw-tag-field>
+            <sw-tag-multi-select :entity="customer"></sw-tag-multi-select >
         {% endblock %}
     </div>
 {% endblock %}
