--- a/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
@@ -1,7 +1,7 @@
 {% block sw_customer_detail_content_tabs %}{% endblock %}
 
 {% block sw_customer_detail_header %}
-    <template slot="smart-bar-header">
+    <template #smart-bar-header>
         <h2>{{ customer | salutation($tc('sw-customer.general.newCustomer')) }}</h2>
     </template>
 {% endblock %}
