--- a/Resources/administration/src/module/sw-customer/view/sw-customer-create-base/sw-customer-create-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-create-base/sw-customer-create-base.html.twig
@@ -4,7 +4,7 @@
     <sw-card :title="$tc('sw-customer.detailBase.labelAddressesCard')"
              :isLoading="customer.isLoading"
              key="address">
-        <sw-customer-address-form :address="defaultAddress"
+        <sw-customer-address-form :address="customer.addresses.first()"
                                   :countries="countries"
                                   :customer="customer">
         </sw-customer-address-form>
