--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
@@ -1,104 +1,68 @@
 {% block sw_customer_detail_order_card %}
     <sw-card class="sw-customer-detail-order">
         {% block sw_customer_detail_order_card_toolbar %}
-            <div class="sw-customer-detail-order-toolbar">
+            <template #toolbar>
                 <sw-card-filter
                         :placeholder="$tc('sw-customer.detailOrder.searchbarPlaceholder')"
-                        v-if="term || orders && orders.length"
+                        v-if="(orders && orders.total > 0) || term"
                         @sw-card-filter-term-change="onChange">
                 </sw-card-filter>
-            </div>
+            </template>
         {% endblock %}
 
         {% block sw_customer_detail_order_card_grid %}
-            <div class="sw-customer-detail-order__content" slot="grid">
-                <sw-loader v-if="isLoading"></sw-loader>
-
-                <template v-if="(!orders || !orders.length) && !isLoading">
-                    {% block sw_customer_detail_order_card_grid_empty_state %}
-                        <sw-empty-state :icon="orderIcon"
-                                        :title="emptyTitle"
-                                        subline="sw-customer.detailOrder.emptySubline">
-                        </sw-empty-state>
-                    {% endblock %}
-                </template>
-
-                <sw-grid v-else
-                         :items="orders"
-                         :selectable="false"
-                         :sortBy="sortBy"
-                         :sortDirection="sortDirection"
-                         @sort-column="onSortColumn">
+            <template #grid v-if="(orders && orders.total > 0) || term">
+                <sw-entity-listing :columns="orderColumns"
+                                   :repository="orderRepository"
+                                   :items="orders"
+                                   :allowColumnEdit="false"
+                                   :showSettings="false"
+                                   :showSelection="false"
+                                   :fullPage="false"
+                                   :isLoading="isLoading">
                     {% block sw_customer_detail_order_card_grid_columns %}
-                        <template slot="columns" slot-scope="{ item }">
-                            {% block sw_customer_detail_order_card_grid_columns_number %}
-                                <sw-grid-column flex="minmax(200px, 1fr)"
-                                                truncate
-                                                :label="$tc('sw-customer.detailOrder.columnNumber')"
-                                                dataIndex="orderNumber"
-                                                sortable
-                                                align="center">
+                        {% block sw_customer_detail_order_card_grid_columns_number %}
+                            <template #column-orderNumber="{ item }">
+                                <router-link :to="{ name: 'sw.order.detail', params: { id: item.id } }">
+                                    {{ item.orderNumber }}
+                                </router-link>
+                            </template>
+                        {% endblock %}
 
-                                    <router-link :to="{ name: 'sw.order.detail', params: { id: item.id } }">
-                                        {{ item.orderNumber }}
-                                    </router-link>
-                                </sw-grid-column>
-                            {% endblock %}
-                            {% block sw_customer_detail_order_card_grid_columns_amount %}
-                                <sw-grid-column flex="minmax(120px, 1fr)"
-                                                :label="$tc('sw-customer.detailOrder.columnAmount')"
-                                                dataIndex="amountTotal"
-                                                sortable
-                                                align="right">
-                                    {{ item.amountTotal | currency }}
-                                </sw-grid-column>
-                            {% endblock %}
-                            {% block sw_customer_detail_order_card_grid_columns_state %}
-                                <sw-grid-column flex="minmax(120px, 1fr)"
-                                                :label="$tc('sw-customer.detailOrder.columnOrderState')"
-                                                dataIndex="stateMachineState.name"
-                                                sortable
-                                                align="left">
-                                    {{ item.stateMachineState.name }}
-                                </sw-grid-column>
-                            {% endblock %}
-                            {% block sw_customer_detail_order_card_grid_columns_date %}
-                                <sw-grid-column flex="minmax(120px, 1fr)"
-                                                :label="$tc('sw-customer.detailOrder.columnOrderDate')"
-                                                dataIndex="createdAt"
-                                                sortable
-                                                align="center">
-                                    {{ item.createdAt|date }}
-                                </sw-grid-column>
-                            {% endblock %}
-                            {% block sw_customer_detail_order_card_grid_columns_action %}
-                                <sw-grid-column flex="minmax(100px, 100px)" align="center">
-                                    {% block sw_customer_detail_order_card_grid_columns_action_button %}
-                                        <sw-context-button>
-                                            <sw-context-menu-item class="sw-order-list-order-view-action"
-                                                                  :routerLink="{ name: 'sw.order.detail', params: { id: item.id } }">
-                                                {{ $tc('sw-customer.detailOrder.columnContextOpenOrder') }}
-                                            </sw-context-menu-item>
-                                        </sw-context-button>
-                                    {% endblock %}
-                                </sw-grid-column>
+                        {% block sw_customer_detail_order_card_grid_columns_amount %}
+                            <template #column-amountTotal="{ item }">
+                                {{ item.amountTotal | currency }}
+                            </template>
+                        {% endblock %}
+
+                        {% block sw_customer_detail_order_card_grid_columns_date %}
+                            <template #column-createdAt="{ item }">
+                                {{ item.createdAt|date }}
+                            </template>
+                        {% endblock %}
+                    {% endblock %}
+
+                    {% block sw_customer_detail_order_card_grid_columns_action %}
+                        <template #actions="{ item }">
+                            {% block sw_customer_detail_order_card_grid_columns_action_button %}
+                                <sw-context-menu-item class="sw-order-list-order-view-action"
+                                                      :routerLink="{ name: 'sw.order.detail', params: { id: item.id } }">
+                                    {{ $tc('sw-customer.detailOrder.columnContextOpenOrder') }}
+                                </sw-context-menu-item>
                             {% endblock %}
                         </template>
                     {% endblock %}
+                </sw-entity-listing>
+            </template>
+        {% endblock %}
 
-                    {% block sw_customer_detail_addresses_grid_pagination %}
-                        <sw-pagination slot="pagination"
-                                       :offset="offset"
-                                       :limit="limit"
-                                       :total="total"
-                                       :total-visible="7"
-                                       :page="page"
-                                       :steps="paginationSteps"
-                                       @page-change="onPageChange">
-                        </sw-pagination>
-                    {% endblock %}
-                </sw-grid>
-            </div>
+        {% block sw_customer_detail_order_card_grid_empty_state %}
+            <template v-if="(!orders || orders.total === 0) && !isLoading && !term">
+                <sw-empty-state :icon="orderIcon"
+                                :title="emptyTitle"
+                                subline="sw-customer.detailOrder.emptySubline">
+                </sw-empty-state>
+            </template>
         {% endblock %}
     </sw-card>
 {% endblock %}
