--- a/Resources/administration/src/module/sw-property/component/sw-property-option-detail/sw-property-option-detail.html.twig
+++ b/Resources/administration/src/module/sw-property/component/sw-property-option-detail/sw-property-option-detail.html.twig
@@ -5,15 +5,27 @@
         {% endblock %}
 
         {% block sw_property_option_detail_position %}
-            <sw-field v-model="currentOption.position" type="number" step="1" pattern="[0-9]" :label="$tc('sw-property.detail.labelOptionPosition')" ></sw-field>
+            <sw-field v-model="currentOption.position" type="number" :step="1" pattern="[0-9]" :label="$tc('sw-property.detail.labelOptionPosition')" ></sw-field>
         {% endblock %}
 
         {% block sw_property_option_detail_color %}
-            <sw-field v-model="currentOption.colorHexCode" type="text" :label="$tc('sw-property.detail.labelOptionColor')" ></sw-field>
+            <sw-colorpicker v-model="currentOption.colorHexCode" :label="$tc('sw-property.detail.labelOptionColor')"></sw-colorpicker>
         {% endblock %}
 
         {% block sw_property_option_detail_media %}
-            <sw-media-field :label="$tc('sw-property.detail.labelOptionMedia')" v-model="currentOption.mediaId"></sw-media-field>
+            <sw-upload-store-listener
+                    :uploadTag="currentOption.id"
+                    @media-upload-add="onUploadsAdded"
+                    @media-upload-finish="successfulUpload">
+            </sw-upload-store-listener>
+
+            <sw-media-compact-upload
+                    :source="currentOption.mediaId"
+                    :uploadTag="currentOption.id"
+                    defaultFolder="product"
+                    @media-upload-remove-image="removeMedia"
+                    @selection-change="setMedia">
+            </sw-media-compact-upload>
         {% endblock %}
 
         {% block sw_property_option_detail_footer %}
