NEXT-2936 - Add sales channel switcher

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-config/sw-plugin-config.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-config/sw-plugin-config.html.twig
@@ -26,6 +26,7 @@
     <sw-card-view slot="content">
         {% block sw_system_config %}
             <sw-system-config :domain="domain"
+                              salesChannelSwitchable
                               ref="systemConfig">
             </sw-system-config>
         {% endblock %}
