--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
@@ -22,6 +22,7 @@
                            :title="product.name"
                            class="sw-cms-el-product-box__image-link">
                             <img class="sw-cms-el-product-box__image"
+                                 :class="displayModeClass"
                                  :src="mediaUrl"
                                  :alt="product.cover.media.alt">
                         </a>
@@ -38,7 +39,7 @@
                         {% endblock %}
 
                         {% block sw_cms_element_product_box_description %}
-                            <div class="sw-cms-el-product-box__description" v-if="element.config.boxLayout.value !== 'minimal'">
+                            <div class="sw-cms-el-product-box__description" v-if="element.config.boxLayout.value === 'standard'">
                                 {{ product.description | truncate(200, true, '...') }}
                             </div>
                         {% endblock %}
@@ -69,9 +70,14 @@
                         {% endblock %}
 
                         {% block sw_cms_element_product_box_actions %}
-                            <div class="sw-cms-el-product-box__actions">
-                                <a href="#" class="sw-cms-el-product-box__detail-action">{{ $tc('sw-cms.elements.labelProductActionDetail') }}</a>
-                                <a href="#" class="sw-cms-el-product-box__buy-action">{{ $tc('sw-cms.elements.labelProductActionBuy') }}</a>
+                            <div class="sw-cms-el-product-box__actions" v-if="element.config.boxLayout.value !== 'minimal'">
+                                <a href="#" class="sw-cms-el-product-box__detail-action"
+                                            v-if="element.config.boxLayout.value !== 'image'">
+                                    {{ $tc('sw-cms.elements.labelProductActionDetail') }}
+                                </a>
+                                <a href="#" class="sw-cms-el-product-box__buy-action">
+                                    {{ $tc('sw-cms.elements.labelProductActionBuy') }}
+                                </a>
                             </div>
                         {% endblock %}
                     </div>
