--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.scss
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.scss
@@ -3,6 +3,26 @@
 .sw-cms-el-product-box {
     height: 100%;
 
+    &.box-image {
+        .sw-cms-el-product-box__media {
+            height: 332px;
+
+            .sw-cms-el-product-box__image-link {
+                img {
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+
+    }
+
+    &.box-minimal {
+        .sw-cms-el-product-box__content {
+            height: auto;
+        }
+    }
+
     a {
         pointer-events: none;
     }
@@ -54,14 +74,30 @@
         justify-content: center;
     }
 
-    .sw-cms-el-product-box__image {
-        display: block;
-        max-width: 100%;
-        max-height: 100%;
+    .sw-cms-el-product-box__media {
+        a {
+            .sw-cms-el-product-box__image {
+                display: block;
+                max-width: 100%;
+                max-height: 100%;
+
+                &.is--cover {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                &.is--contain {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+        }
     }
 
     .sw-cms-el-product-box__info {
-        margin: 20px 10px 10px 10px;
+        margin: 16px 10px 10px 10px;
         flex-shrink: 1;
         flex-grow: 1;
         flex-basis: 60%;
@@ -69,7 +105,7 @@
 
     .sw-cms-el-product-box__name {
         display: block;
-        height: 40px;
+        max-height: 40px;
         font-size: 18px;
         line-height: 20px;
         overflow: hidden;
@@ -82,7 +118,7 @@
     }
 
     .sw-cms-el-product-box__description {
-        height: 72px;
+        max-height: 72px;
         margin-top: 10px;
         font-size: 14px;
         line-height: 18px;
@@ -114,41 +150,46 @@
         font-weight: bold;
         line-height: 20px;
         overflow: hidden;
+        color: $color-kashmir;
     }
 
-    .sw-cms-el-product-box__detail-action {
-        display: block;
-        margin-top: 10px;
-        line-height: 38px;
-        font-size: 14px;
-        font-weight: bold;
-        text-align: center;
-        text-decoration: none;
-        color: #5f7285;
-        background: linear-gradient(to bottom, #fff 0%, #f8f8fa 100%);
-        border: 1px solid #dadee5;
-        border-radius: 4px;
+    .sw-cms-el-product-box__actions {
+        margin-top:20px;
 
-        &:hover {
-            color: #465462;
-            background: linear-gradient(to bottom, #f8f8fa 0%, #f2f2f2 100%);
+        .sw-cms-el-product-box__detail-action {
+            display: block;
+            margin-top: 10px;
+            line-height: 38px;
+            font-size: 14px;
+            font-weight: bold;
+            text-align: center;
+            text-decoration: none;
+            color: #5f7285;
+            background: $color-link-water;
+            border: 1px solid #dadee5;
+            border-radius: 4px;
+
+            &:hover {
+                color: #465462;
+                background: darken($color-link-water, 5%);
+            }
         }
-    }
 
-    .sw-cms-el-product-box__buy-action {
-        display: block;
-        margin-top: 10px;
-        line-height: 40px;
-        font-size: 14px;
-        font-weight: bold;
-        text-align: center;
-        text-decoration: none;
-        color: #fff;
-        background: linear-gradient(to bottom, #7793ae 0%, #6a849c 100%);
-        border-radius: 4px;
+        .sw-cms-el-product-box__buy-action {
+            display: block;
+            margin-top: 10px;
+            line-height: 40px;
+            font-size: 14px;
+            font-weight: bold;
+            text-align: center;
+            text-decoration: none;
+            color: #fff;
+            background: $color-gutenberg;
+            border-radius: 4px;
 
-        &:hover {
-            background: linear-gradient(to bottom, #738da7 0%, #5e768b 100%);
+            &:hover {
+                background: darken($color-gutenberg, 5%);
+            }
         }
     }
 }
