--- a/Resources/administration/src/module/sw-settings-store/page/sw-settings-store/sw-settings-store.html.twig
+++ b/Resources/administration/src/module/sw-settings-store/page/sw-settings-store/sw-settings-store.html.twig
@@ -1,49 +1,49 @@
-{% block sw_settings_store %}
-    {% block sw_settings_store_index %}
-        <sw-page class="sw-settings-store">
+{% block sw_settings_store_index %}
+    <sw-page class="sw-settings-store">
 
-            {% block sw_settings_store_search_bar %}
-                <template slot="search-bar">
-                    <sw-search-bar>
-                    </sw-search-bar>
-                </template>
-            {% endblock %}
+        {% block sw_settings_store_search_bar %}
+            <template slot="search-bar">
+                <sw-search-bar>
+                </sw-search-bar>
+            </template>
+        {% endblock %}
 
-            {% block sw_settings_store_smart_bar_header %}
-                <template slot="smart-bar-header">
-                    {% block sw_settings_store_smart_bar_header_title %}
-                        <h2>
-                            {% block sw_settings_store_smart_bar_header_title_text %}
-                                    {{ $tc('sw-settings.index.title') }}
-                                    <sw-icon name="small-arrow-medium-right" small>
-                                    </sw-icon>
-                                    {{ $tc('sw-settings-store.general.textHeadline') }}
-                            {% endblock %}
-                        </h2>
-                    {% endblock %}
-                </template>
-            {% endblock %}
+        {% block sw_settings_store_smart_bar_header %}
+            <template slot="smart-bar-header">
+                {% block sw_settings_store_smart_bar_header_title %}
+                    <h2>
+                        {% block sw_settings_store_smart_bar_header_title_text %}
+                                {{ $tc('sw-settings.index.title') }}
+                                <sw-icon name="small-arrow-medium-right" small>
+                                </sw-icon>
+                                {{ $tc('sw-settings-store.general.textHeadline') }}
+                        {% endblock %}
+                    </h2>
+                {% endblock %}
+            </template>
+        {% endblock %}
 
-            {% block sw_settings_store_smart_bar_actions %}
-                <template slot="smart-bar-actions">
-                    {% block sw_settings_store_actions_save %}
-                    <sw-button variant="primary"
-                               class="sw-settings-store__save-action"
-                               @click="onSave">
-                        {{ $tc('sw-settings-store.general.buttonSave') }}
-                    </sw-button>
-                    {% endblock %}
-                </template>
-            {% endblock %}
+        {% block sw_settings_store_smart_bar_actions %}
+            <template slot="smart-bar-actions">
+                {% block sw_settings_store_actions_save %}
+                <sw-button variant="primary"
+                           class="sw-settings-store__save-action"
+                           @click="onSave">
+                    {{ $tc('sw-settings-store.general.buttonSave') }}
+                </sw-button>
+                {% endblock %}
+            </template>
+        {% endblock %}
 
-            {% block sw_settings_store_content %}
-                <sw-card-view slot="content">
-                   <sw-system-config
+        {% block sw_settings_store_content %}
+            <template slot="content">
+                <sw-card-view>
+                    <sw-system-config
                             ref="systemConfig"
                             domain="core.store">
-                   </sw-system-config>
+                    </sw-system-config>
                 </sw-card-view>
-            {% endblock %}
-        </sw-page>
-    {% endblock %}
+            </template>
+        {% endblock %}
+    </sw-page>
 {% endblock %}
