NTR - Added label

--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
@@ -19,6 +19,7 @@
                      v-else>
 
                 {% block sw_product_detail_prices_price_card_toolbar %}
+                    <label class="context-prices__toolbar-label">{{ $tc('sw-product.prices.toolbarLabel') }}</label>
                     <div class="context-prices__toolbar">
 
                         {% block sw_product_detail_prices_price_card_rule_selection %}
