NEXT-2917 - Promotion: clean up code + templates

--- a/Resources/administration/src/module/sw-promotion/component/sw-promotion-scope-form/sw-promotion-scope-form.html.twig
+++ b/Resources/administration/src/module/sw-promotion/component/sw-promotion-scope-form/sw-promotion-scope-form.html.twig
@@ -1,8 +1,8 @@
 {% block sw_promotion_scope_form %}
     <div class="sw-promotion-scope-form">
-        <h4>{{ $tc('sw-promotion.detail.main.preconditions.descriptionTitleScope') }}</h4>
+        <h4>{{ $tc('sw-promotion.detail.main.preconditions.cart.title') }}</h4>
         <p>
-            {{ $tc('sw-promotion.detail.main.preconditions.descriptionTextScope') }}
+            {{ $tc('sw-promotion.detail.main.preconditions.cart.text') }}
             <router-link :to="{ name: 'sw.settings.rule.index' }">
                 {{ $tc('sw-promotion.detail.main.preconditions.ruleModuleLink') }}
             </router-link>
