--- a/Resources/administration/src/module/sw-promotion/view/sw-promotion-detail-restrictions/sw-promotion-detail-restrictions.html.twig
+++ b/Resources/administration/src/module/sw-promotion/view/sw-promotion-detail-restrictions/sw-promotion-detail-restrictions.html.twig
@@ -9,7 +9,7 @@
         {% endblock %}
 
         {% block sw_promotion_detail_restrictions_scope_rule_card %}
-            <sw-card :title="$tc('sw-promotion.detail.main.preconditions.cardTitleScopeRules')" :isLoading="promotion.isLoading">
+                <sw-card :title="$tc('sw-promotion.detail.main.preconditions.cart.card')" :isLoading="promotion.isLoading">
                     {% block sw_promotion_detail_restrictions_scope_rule_form %}
                     <sw-promotion-scope-form :promotion="promotion"></sw-promotion-scope-form>
                 {% endblock %}
