--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -107,7 +107,7 @@
 
             {% block sw_manufacturer_detail_custom_field_sets %}
                 <sw-card :title="$tc('sw-settings-custom-field.general.mainMenuItemGeneral')"
-                         v-if="next754 && customFieldSets.length > 0"
+                         v-if="customFieldSets.length > 0"
                          :isLoading="manufacturer.isLoading">
                     <sw-custom-field-set-renderer
                             :entity="manufacturer"
