--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -249,7 +249,7 @@
         {% endblock %}
         {% block sw_sales_channel_detail_custom_field_sets %}
             <sw-card :title="$tc('sw-settings-custom-field.general.mainMenuItemGeneral')"
-                 v-if="next754 && customFieldSets.length > 0"
+                 v-if="customFieldSets.length > 0"
                  :isLoading="salesChannel.isLoading">
                 <sw-custom-field-set-renderer
                     :entity="salesChannel"
