--- a/Resources/administration/src/module/sw-settings-custom-field/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-custom-field/extension/sw-settings-index/sw-settings-index.html.twig
@@ -2,7 +2,7 @@
     {% parent %}
 
     {% block sw_settings_custom_field_item %}
-        <sw-settings-item v-if="next754" id="sw-settings-custom-field" :label="$tc('sw-settings-custom-field.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.custom.field.index' }">
+        <sw-settings-item id="sw-settings-custom-field" :label="$tc('sw-settings-custom-field.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.custom.field.index' }">
             <template slot="icon">
                 <sw-icon name="default-basic-stack-block"></sw-icon>
             </template>
