--- a/Resources/administration/src/module/sw-settings/component/sw-settings-item/sw-settings-item.html.twig
+++ b/Resources/administration/src/module/sw-settings/component/sw-settings-item/sw-settings-item.html.twig
@@ -1,7 +1,7 @@
 {% block sw_settings_item %}
     <router-link :to="to" class="sw-settings-item" :class="classes">
         {% block sw_settings_item_icon %}
-            <div class="sw-settings-item__icon">
+            <div class="sw-settings-item__icon" :class="{ 'background--enabled': backgroundEnabled === true }">
                 <slot name="icon"></slot>
             </div>
         {% endblock %}
