NTR - Sort rules by name

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -11,6 +11,8 @@
                        :previewResultsLimit="500"
                        :required="true"
                        class="field--condition"
+                       sortField="translated.label"
+                       sortDirection="ASC"
                        :title="$tc(getLabel(condition.type))"
                        @input="conditionChanged">
             </sw-select>
