--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
@@ -376,5 +376,6 @@ $sw-condition-base-text-access-key: $color-gutenberg;
     .sw-condition-base__error-container {
         display: block;
         color: $sw-condition-base-color-error;
+        font-size: 14px;
     }
 }
