NTR - Fix shipping rule select

--- a/Resources/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
@@ -1,5 +1,5 @@
 {% block sw_select_rule_create %}
-    <div class="sw_select_rule_create">
+    <div class="sw-select-rule-create">
         {% block sw_select_rule_create_select %}
             <sw-select :store="ruleStore"
                        :value="ruleId"
