--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrices/sw-settings-shipping-price-matrices.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrices/sw-settings-shipping-price-matrices.html.twig
@@ -7,6 +7,7 @@
                                                :priceRuleGroups="priceRuleGroups"
                                                :shippingMethod="shippingMethod"
                                                @rule-change="onRuleChange"
+                                               @rule-add="loadRules"
                                                @duplicate-price-matrix="onDuplicatePriceMatrix"
                                                @delete-price-matrix="onDeletePriceMatrix">
             </sw-settings-shipping-price-matrix>
