Set correct value in sw-password-field

--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
@@ -6,7 +6,7 @@
                    :name="identification"
                    :placeholder="placeholder"
                    :disabled="disabled"
-                   value="currentValue"
+                   :value="currentValue"
                    @input="onInput"
                    @change="onChange"
                    @focus="setFocusClass"
